--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3831,42 +3831,42 @@ kg
                             "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg"
                         }
                     },
-                    "l": ["http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/cf0f5af872286b4401c644ad570b1401.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/7e5915c0369bb67f9240d3b0a501a2e5.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ced7d4f37c325fd9e001d90e359b17b1.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/b6d1d6f360b6bc3660dc54fbc3fe7df0.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/ce511e82689c364d20fec5608adc6cf3.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/5a726b8a757f4b8cf9119dfa675816b5.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/96b6a60c3303906015d4032211e4b079.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/ea4fe8c4505af919b7191de04b281b93.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/1106c281db2655156a8e08432d9ab567.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/d6cce24ee78944325364cd30bd20fdf5.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/8e7cde57106b127e4b8fc0970cb6d65d.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/5f4cadb282c332c2de83ff248ce9bb37.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/a883d6a1227bd31f1677b3b616b2c285.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f9bd60aeeb955a43395e2383c6cde17f.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/fd0a7dfded17e71db2b50a36b4fbfd59.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/1070f27d097b076cfb92c9f35232b43e.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/6e063bdc942ad4b54e2bbca4a78c8954.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/9da100987158cfe8ebba9397d3a982a5.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/611fb0f2780409db7dd4c429850216dd.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/bd02113f22c12494c713a43bcc0c8e90.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/bc0543756e6e7d6189a870046b7ae4a1.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/3e4557ac9a31de976e01c0af62991395.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/16b3879c2979dd93fcb3961151e009de.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/72aa896d01f6deaf6f33384129057c9d.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/56793c4865905355a7c5303aa40fe4fc.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/54fd689747f5196b64ec8a863d944f62.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/cb1479a63047d8251a1f07586bfde905.jpg", 
-                          "", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/2b6a94e2836a3e5db9bd91336887fbdc.jpg", 
-                          "", 
+                    "l": ["../../image_sp/card/l/fumika_01.jpg", 
+                          "../../image_sp/card/l/fumika_02.jpg", 
+                          "../../image_sp/card/l/fumika_03.jpg", 
+                          "../../image_sp/card/l/fumika_04.jpg", 
+                          "../../image_sp/card/l/fumika_05.jpg", 
+                          "../../image_sp/card/l/fumika_06.jpg", 
+                          "../../image_sp/card/l/fumika_07.jpg", 
+                          "../../image_sp/card/l/fumika_08.jpg", 
+                          "../../image_sp/card/l/fumika_09.jpg", 
+                          "../../image_sp/card/l/fumika_10.jpg", 
+                          "../../image_sp/card/l/fumika_11.jpg", 
+                          "../../image_sp/card/l/fumika_12.jpg", 
+                          "../../image_sp/card/l/fumika_13.jpg", 
+                          "../../image_sp/card/l/fumika_14.jpg", 
+                          "../../image_sp/card/l/fumika_15.jpg", 
+                          "../../image_sp/card/l/fumika_16.jpg", 
+                          "../../image_sp/card/l/fumika_17.jpg", 
+                          "../../image_sp/card/l/fumika_18.jpg", 
+                          "../../image_sp/card/l/fumika_19.jpg", 
+                          "../../image_sp/card/l/fumika_20.jpg", 
+                          "../../image_sp/card/l/fumika_21.jpg", 
+                          "../../image_sp/card/l/fumika_22.jpg", 
+                          "../../image_sp/card/l/fumika_23.jpg", 
+                          "../../image_sp/card/l/fumika_24.jpg", 
+                          "../../image_sp/card/l/fumika_25.jpg", 
+                          "../../image_sp/card/l/fumika_26.jpg", 
+                          "../../image_sp/card/l/fumika_27.jpg", 
+                          "../../image_sp/card/l/fumika_28.jpg", 
+                          "../../image_sp/card/l/fumika_29.jpg", 
+                          "../../image_sp/card/l/fumika_30.jpg", 
+                          "../../image_sp/card/l/fumika_31.jpg", 
+                          "../../image_sp/card/l/fumika_32.jpg", 
+                          "../../image_sp/card/l/fumika_33.jpg", 
+                          "../../image_sp/card/l/fumika_34.jpg", 
+                          "../../image_sp/card/l/fumika_35.jpg", 
+                          "../../image_sp/card/l/fumika_36.jpg", 
                           "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/45b089ee2ddc60f26d271e1e0a86e0df.jpg", 
                           "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/1bfbf5c344ce17e6e86444dbb72154d6.jpg"],
                     "l_premium": {
