--- a/idol_story/movie_play/448/3.html
+++ b/idol_story/movie_play/448/3.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/css/game/pex.css' media="all">
-    <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/jquery-1.9.1.min.js'></script>
+    <link rel="stylesheet" href='../../../css/game/pex.css' media="all">
+    <script src='../../../js/jquery-1.9.1.min.js'></script>
     <script>
         $(document).ready(function() {
             if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
@@ -43,13 +43,13 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
     </style>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs.min.js%3Fv%3D20190925114611'></script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/app_sound.js%3Fv%3D20200713144634'></script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/episode/448_2/talk.js%3Fv%3D20210709144655'></script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/episode/448_2/448_2.js%3Fv%3D20210709144655'></script>
+    <script type='text/javascript' src='../../../js/createjs.min.js'></script>
+    <script type='text/javascript' src='../../../js/app_sound.js'></script>
+    <script type='text/javascript' src='../../../js/cjs/episode/448_2/talk.js'></script>
+    <script type='text/javascript' src='../../../js/cjs/episode/448_2/448_2.js'></script>
     <script>
-        var image_server = "http://sp.pf-img-a.mbga.jp/12008305/";
-        var base_url = "http://125.6.169.35/idolmaster/";
+        var image_server = "";
+        var base_url = "";
         // 音声ファイルのmanifestを定義
         window.voice_manifest = {
             'scene1': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/21cb6912fa4e12f02f08a4f439c19f29.mp4',
@@ -61,9 +61,9 @@
             'scene7': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/d77bfd75bf198b5a0c25ee41657587c8.mp4',
         };
         window.file_name = "_448_2"; // createjs の本体ファイルを定義
-        window.dir_name = "image_sp/cjs/episode/448_2/";
+        window.dir_name = "../../../image_sp/cjs/episode/448_2/";
         window.im_cjs.voice_flag = true; // 音声再生フラグを定義
-        window.im_cjs.jump_url = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/index%3Fkeyword%3D%26l_frm%3DIdol_story_cjs_1%26rnd%3D460277011'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/fumika.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
     </script>
     <script>
         var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
@@ -81,7 +81,7 @@
                 for (var i = 0, len = lib.properties.manifest.length; i < len; i++) {
                     new_manifest[i] = {
                         'type': 'image',
-                        'src': window.image_server + '?url=' + encodeURIComponent(window.base_url + window.dir_name + lib.properties.manifest[i].src),
+                        'src': window.image_server + encodeURIComponent(window.base_url + window.dir_name + lib.properties.manifest[i].src),
                         'id': lib.properties.manifest[i].id
                     }
                 }
@@ -192,7 +192,7 @@
     <script>
         (function() {
             window.viewer_id = 134800333;
-            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error%3Fl_frm%3DIdol_story_cjs_1%26rnd%3D605844702";
+            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error";
             var _path = location.href;
             var _spec_obj;
             var _spec = 'none';
@@ -223,8 +223,8 @@
             chrome_app_flg = 0,
             chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
     </script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/app_sound.js%3Fv%3D20200713144634'></script>
-    <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/css/base.css?20171116" />
+    <script type='text/javascript' src='../../../js/app_sound.js'></script>
+    <link rel="stylesheet" type="text/css" href="../../../css/base.css" />
 </head>
 
 <body onload="init();" style="margin:0px;">
@@ -233,8 +233,8 @@
         <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:240px; height:310px; position: absolute; left: 0px; top: 0px; display: block;">
         </div>
     </div>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/boombox.min.js'></script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/voice_cjs.js'></script>
+    <script type='text/javascript' src='../../../js/boombox.min.js'></script>
+    <script type='text/javascript' src='../../../js/voice_cjs.js'></script>
     <div id="mbga-pf-footer">
         <script type="text/javascript" charset="UTF-8">
             (function() {
