--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3468,20 +3468,20 @@ kg
                         "card_cv": "M・A・O"
                     },
                     "comments": {
-                        "comment": "…ここにある書は全て､人が､人のために綴ったもの｡…私というｱｲﾄﾞﾙも､ﾌﾟﾛﾃﾞｭｰｻｰさんが､私と､ﾌｧﾝの方々のために｡そう気づいた時､私は…私を取り巻く全てを､愛おしく思ったんです",
-                        "comments_my_1": "今を…心に刻みましょう",
-                        "comments_my_2": "感じるのは…眩くも優しい光…",
-                        "comments_my_3": "今日も…空は青く澄んでいます",
-                        "comments_my_4": "古書のように…時を重ねても褪せない想いは､今､私の胸に…",
-                        "comments_my_max": "ふふ…OOさんと過ごすうちに､笑顔も増えました",
-                        "comments_work_1": "…ｱｲﾄﾞﾙにも､書にも､夢中です",
-                        "comments_work_2": "…夢が､さらに広がりますね",
-                        "comments_work_3": "…共に､読みましょうか",
-                        "comments_work_4": "…今も､変わらず思っています｡もっと､多くの書に触れたい､と",
-                        "comments_work_max": "感動も､思い出も､愛しい日々も…貴方と分かち合ってこそ…",
-                        "comments_work_love_up": "書を読み…気づけば､口ずさんでいました｡貴方がくれた歌を…",
-                        "comments_live": "もう少しだけ…このまま…",
-                        "comments_love_max": "奇跡のような日々が降り積もり…未来を､私とOOさんで紡ぐ…｡過去も未来も､煌めきで満ちるに､違いありません"
+                        "comment": "…여기에 있는 책은 전부, 사람이, 사람을 위해서 지은 것. …저라는 아이돌도, 프로듀서 씨가, 저와, 팬 분들을 위해서. 그걸 깨달았을 때, 저는… 저를 둘러싼 모든 것을, 사랑스럽게 생각했습니다.",
+                        "comments_my_1": "지금을… 마음에 새깁시다.",
+                        "comments_my_2": "느껴지는 건… 눈부시고 상냥한 빛…",
+                        "comments_my_3": "오늘도… 하늘은 푸르고 맑습니다.",
+                        "comments_my_4": "고서처럼… 시간을 쌓아 올려도 바래지 않는 마음은, 지금, 저의 가슴에…",
+                        "comments_my_max": "후후… OO 씨와 지내는 동안에, 미소도 늘었습니다.",
+                        "comments_work_1": "…아이돌에도, 책에도, 열중하고 있습니다.",
+                        "comments_work_2": "…꿈이, 더욱 넓어지네요.",
+                        "comments_work_3": "…함께, 읽을까요.",
+                        "comments_work_4": "…지금도, 변함없이 생각하고 있습니다. 좀더, 많은 책을 접하고 싶다, 고요.",
+                        "comments_work_max": "감동도, 추억도, 사랑스러운 나날도… 당신과 나눠가져야만…",
+                        "comments_work_love_up": "책을 읽다… 눈치채보면, 흥얼거리고 있습니다. 당신이 주신 노래를…",
+                        "comments_live": "조금만 더… 이대로…",
+                        "comments_love_max": "기적같은 날들이 내려 쌓이고… 미래를, 저와 OO씨로 짓는다…. 과거도 미래도, 반짝임으로 충만할 것이, 틀림없습니다."
                     },
                     "voice": {
                         "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/18d153943eea61cb3f8dbaff0bc2dbeb.mp4",
@@ -3548,20 +3548,20 @@ kg
                         "card_cv": "M・A・O"
                     },
                     "comments": {
-                        "comment": "ｱｲﾄﾞﾙになり…私にも残すことができました｡書が好きなだけの､普通の少女が輝きだす…ｼﾝﾃﾞﾚﾗのようなお話を｡…美しい舞台に立てた今､語らせてください｡私の言葉で…鷺沢文香の物語を",
-                        "comments_my_1": "今を…心に刻みましょう",
-                        "comments_my_2": "感じるのは…眩くも優しい光…",
-                        "comments_my_3": "私…また､変われたんですね",
-                        "comments_my_4": "書を開けば…零時の鐘が鳴り､新たな物語が動き出しますよ",
-                        "comments_my_max": "…私も､私を信じています｡OOさんが信じた私を",
-                        "comments_work_1": "…ｱｲﾄﾞﾙにも､書にも､夢中です",
-                        "comments_work_2": "…夢が､さらに広がりますね",
-                        "comments_work_3": "はい…鷺沢文香は､ｱｲﾄﾞﾙです",
-                        "comments_work_4": "ﾌｧﾝの皆さんに､感謝を…｡顔を上げ､目を合わせて伝えます",
-                        "comments_work_max": "私が輝いているというのなら…照らしてくれたのは､貴方です",
-                        "comments_work_love_up": "OOさんの本気が…私をここまで導いてくれました",
-                        "comments_live": "…頁を捲るのが楽しみです",
-                        "comments_love_max": "…OOさん､素敵な物語をありがとうございます｡…そして､これからも､紡いでいきましょう｡輝く物語を､ふたりで"
+                        "comment": "아이돌이 되어서… 제게도 남길 수 있었습니다. 책이 좋을 뿐인, 평범한 소녀가 빛나기 시작하는… 신데렐라같은 이야기를. …아름다운 무대에 선 지금, 말하게 해주세요. 저의 말로… 사기사와 후미카의 이야기를.",
+                        "comments_my_1": "지금을… 마음에 새깁시다.",
+                        "comments_my_2": "느껴지는 건… 눈부시고 상냥한 빛…",
+                        "comments_my_3": "저… 또, 변했네요.",
+                        "comments_my_4": "책을 펼치면… 자정의 종이 울리고, 새로운 이야기가 움직이기 시작해요.",
+                        "comments_my_max": "…저도, 저를 믿고 있습니다. OO 씨가 믿어준 저를.",
+                        "comments_work_1": "…아이돌에도, 책에도, 열중하고 있습니다.",
+                        "comments_work_2": "…꿈이, 더욱 넓어지네요.",
+                        "comments_work_3": "네…사기사와 후미카는, 아이돌입니다.",
+                        "comments_work_4": "팬 여러분들께, 감사를…. 고개를 들고, 눈을 마주쳐 전합니다.",
+                        "comments_work_max": "제가 빛나고 있다면… 비춰주신 건, 당신입니다.",
+                        "comments_work_love_up": "OO씨의 진심이… 저를 여기까지 이끌어주었습니다.",
+                        "comments_live": "…페이지를 넘기는 게 기대됩니다.",
+                        "comments_love_max": "…OO씨, 멋진 이야기 감사합니다. …그리고, 앞으로도, 자아내가죠. 빛나는 이야기를, 둘이서."
                     },
                     "voice": {
                         "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/fd0de4a881ec5e8e1931f6ac4d2c499d.mp4",
@@ -3596,12 +3596,12 @@ kg
                 }];
                 idol.idol_story_list = [{
                     "story_id": "448",
-                    "story_title": "シンデレラガール鷺沢文香",
+                    "story_title": "신데렐라 걸 사기사와 후미카",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/448/1.html", 
-                                   "../../idol_story/movie_play/448/2.html"],
-                    "voice_url": ["../../idol_story/sound_play/448/1.html", 
-                                  "../../idol_story/sound_play/448/2.html"],
+                    "flash_path": ["../../idol_story/movie_play/448/1_k.html", 
+                                   "../../idol_story/movie_play/448/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/448/1_k.html", 
+                                  "../../idol_story/sound_play/448/2_k.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/089.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_448_2.jpg"],
@@ -3609,18 +3609,18 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "436",
-                    "story_title": "旅立ちの時♪まだ見ぬ明日へ",
+                    "story_title": "여행을 떠날 때♪ 아직 보지 못한 내일로",
                     "voice_enable": {
                         "0": "1",
                         "2": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/436/1.html",
-                        "2": "../../idol_story/movie_play/436/3.html"
+                        "0": "../../idol_story/movie_play/436/1_k.html",
+                        "2": "../../idol_story/movie_play/436/3_k.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/436/1.html",
-                        "2": "../../idol_story/sound_play/436/3.html"
+                        "0": "../../idol_story/sound_play/436/1_k.html",
+                        "2": "../../idol_story/sound_play/436/3_k.html"
                     },
                     "open_flag": {
                         "0": "1",
@@ -3636,18 +3636,18 @@ kg
                     }
                 }, {
                     "story_id": "407",
-                    "story_title": "素敵を探して♪まだ見ぬ場所へ",
+                    "story_title": "멋진 곳을 찾아서♪ 아직 보지 못한 장소에",
                     "voice_enable": {
                         "0": "1",
                         "2": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/407/1.html",
-                        "2": "../../idol_story/movie_play/407/3.html"
+                        "0": "../../idol_story/movie_play/407/1_k.html",
+                        "2": "../../idol_story/movie_play/407/3_k.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/407/1.html",
-                        "2": "../../idol_story/sound_play/407/3.html"
+                        "0": "../../idol_story/sound_play/407/1_k.html",
+                        "2": "../../idol_story/sound_play/407/3_k.html"
                     },
                     "open_flag": {
                         "0": "1",
@@ -3663,18 +3663,18 @@ kg
                     }
                 }, {
                     "story_id": "381",
-                    "story_title": "秋の物語…♪癒しの湯の香",
+                    "story_title": "가을 이야기…♪ 치유의 온천 향기",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/381/1.html",
-                        "3": "../../idol_story/movie_play/381/4.html"
+                        "0": "../../idol_story/movie_play/381/1_k.html",
+                        "3": "../../idol_story/movie_play/381/4_k.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/381/1.html",
-                        "3": "../../idol_story/sound_play/381/4.html"
+                        "0": "../../idol_story/sound_play/381/1_k.html",
+                        "3": "../../idol_story/sound_play/381/4_k.html"
                     },
                     "open_flag": {
                         "0": "1",
@@ -3690,18 +3690,18 @@ kg
                     }
                 }, {
                     "story_id": "305",
-                    "story_title": "天高く!輝け秋の運動会",
+                    "story_title": "하늘 높이! 빛나는 가을 운동회",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/305/1.html",
-                        "3": "../../idol_story/movie_play/305/4.html"
+                        "0": "../../idol_story/movie_play/305/1_k.html",
+                        "3": "../../idol_story/movie_play/305/4_k.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/305/1.html",
-                        "3": "../../idol_story/sound_play/305/4.html"
+                        "0": "../../idol_story/sound_play/305/1_k.html",
+                        "3": "../../idol_story/sound_play/305/4_k.html"
                     },
                     "open_flag": {
                         "0": "1",
@@ -3717,12 +3717,12 @@ kg
                     }
                 }, {
                     "story_id": "258",
-                    "story_title": "聖夜の燈火",
+                    "story_title": "성야의 등화",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/258/1",
-                                   "../../idol_story/movie_play/258/2"],
-                    "voice_url": ["../../idol_story/sound_play/258/1",
-                                  "../../idol_story/sound_play/258/2"],
+                    "flash_path": ["../../idol_story/movie_play/258/1_k",
+                                   "../../idol_story/movie_play/258/2_k"],
+                    "voice_url": ["../../idol_story/sound_play/258/1_k",
+                                  "../../idol_story/sound_play/258/2_k"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/089.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_258_2.jpg"],
@@ -3730,18 +3730,18 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "214",
-                    "story_title": "光あふれる☆ ハピネスウェディング",
+                    "story_title": "빛이 넘치는☆ 해피니스 웨딩",
                     "voice_enable": {
                         "1": "1",
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "../../idol_story/movie_play/214/2.html",
-                        "4": "../../idol_story/movie_play/214/5.html"
+                        "1": "../../idol_story/movie_play/214/2_k.html",
+                        "4": "../../idol_story/movie_play/214/5_k.html"
                     },
                     "voice_url": {
-                        "1": "../../idol_story/sound_play/214/2.html",
-                        "4": "../../idol_story/sound_play/214/5.html"
+                        "1": "../../idol_story/sound_play/214/2_k.html",
+                        "4": "../../idol_story/sound_play/214/5_k.html"
                     },
                     "open_flag": {
                         "1": "1",
@@ -3757,12 +3757,12 @@ kg
                     }
                 }, {
                     "story_id": "180",
-                    "story_title": "アイドルプロデュース the 5th Anniversary",
+                    "story_title": "아이돌 프로듀스 the 5th Anniversary",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/180/1.html",
-                                   "../../idol_story/movie_play/180/2.html"],
-                    "voice_url": ["../../idol_story/sound_play/180/1.html",
-                                  "../../idol_story/sound_play/180/2.html"],
+                    "flash_path": ["../../idol_story/movie_play/180/1_k.html",
+                                   "../../idol_story/movie_play/180/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/180/1_k.html",
+                                  "../../idol_story/sound_play/180/2_k.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_180_1.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_180_2.jpg"],
@@ -3770,12 +3770,12 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_special_2.png"]
                 }, {
                     "story_id": "155",
-                    "story_title": "幽玄の馨香",
+                    "story_title": "유현의 형향",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/155/1.html",
-                                   "../../idol_story/movie_play/155/2.html"],
-                    "voice_url": ["../../idol_story/sound_play/155/1.html",
-                                  "../../idol_story/sound_play/155/2.html"],
+                    "flash_path": ["../../idol_story/movie_play/155/1_k.html",
+                                   "../../idol_story/movie_play/155/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/155/1_k.html",
+                                  "../../idol_story/sound_play/155/2_k.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_fumika.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_155_2.jpg"],
@@ -3783,12 +3783,12 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "128",
-                    "story_title": "\u7f8e\u7ca7\u306e\u714c\u3081\u304d",
+                    "story_title": "미장의 반짝임",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/128/1.html",
-                                   "../../idol_story/movie_play/128/2.html"],
-                    "voice_url": ["../../idol_story/sound_play/128/1.html",
-                                  "../../idol_story/sound_play/128/2.html"],
+                    "flash_path": ["../../idol_story/movie_play/128/1_k.html",
+                                   "../../idol_story/movie_play/128/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/128/1_k.html",
+                                  "../../idol_story/sound_play/128/2_k.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_128_1.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_128_2.jpg"],
@@ -3796,18 +3796,18 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "69",
-                    "story_title": "イタズラ小悪魔バレンタイン",
+                    "story_title": "장난 소악마 발렌타인",
                     "voice_enable": {
                         "1": "1",
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "../../idol_story/movie_play/69/2.html",
-                        "4": "../../idol_story/movie_play/69/5.html"
+                        "1": "../../idol_story/movie_play/69/2_k.html",
+                        "4": "../../idol_story/movie_play/69/5_k.html"
                     },
                     "voice_url": {
-                        "1": "../../idol_story/sound_play/69/2.html",
-                        "4": "../../idol_story/sound_play/69/5.html"
+                        "1": "../../idol_story/sound_play/69/2_k.html",
+                        "4": "../../idol_story/sound_play/69/5_k.html"
                     },
                     "open_flag": {
                         "1": "1",
@@ -3823,18 +3823,18 @@ kg
                     }
                 }, {
                     "story_id": "43",
-                    "story_title": "夏本番!! ビーチバカンス",
+                    "story_title": "여름 실전!! 해변 바캉스",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
                     },
                     "flash_path": {
-                        "0": "../../idol_story/movie_play/43/1.html",
-                        "3": "../../idol_story/movie_play/43/4.html"
+                        "0": "../../idol_story/movie_play/43/1_k.html",
+                        "3": "../../idol_story/movie_play/43/4_k.html"
                     },
                     "voice_url": {
-                        "0": "../../idol_story/sound_play/43/1.html",
-                        "3": "../../idol_story/sound_play/43/4.html"
+                        "0": "../../idol_story/sound_play/43/1_k.html",
+                        "3": "../../idol_story/sound_play/43/4_k.html"
                     },
                     "open_flag": {
                         "0": "1",
